--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
 <body>
   <section class="page-header">
-    <h1 class="project-name">えふぇｒげｒげｒげげｒｇrngoeirghioreAki-lua87.GitHub.io ぬ</h1>
+    <h1 class="project-name">Aki-lua87.GitHub.io ぬ</h1>
     <h2 class="project-tagline"></h2>
   </section>
-
-  <a href="test.html"> test Page </a>
 
   <section class="main-content">
     <h3>
