--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <body>
 
 <h1>test</h1>
-<a href="test.html">test link</a>
-
-<a href="https://twitter.com/aki_lua87">twitter</a>
+<p><a href="test.html">test link of OnlyWhiteDreadNought</a></p>
+<p><a href="https://twitter.com/aki_lua87">twitter</a></p>
 
 </body>
 
