Add other suite

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
 
 <h1>test</h1>
-<p><a href="test.html">test link of OnlyWhiteDreadNought</a></p>
-<p><a href="https://twitter.com/aki_lua87">twitter</a></p>
+<p><a href="https://github.com/aki-lua87">Github MyPage</a></p>
+<p><a href="https://twitter.com/aki_lua87">Twitter</a></p>
 <p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
+<p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
+
 </body>
 
 </html>
