タイトル変更

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-<h1>test</h1>
+<h1>雑な各種リンク</h1>
 <p><a href="https://github.com/aki-lua87">Github MyPage</a></p>
 <p><a href="https://twitter.com/aki_lua87">Twitter</a></p>
 <p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
 <p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
-
+<p><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいモノリスと/a></p>
 </body>
 
 </html>
