--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p><a href="https://twitter.com/aki_lua87">Twitter</a></p>
 <p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
 <p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
-<p><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいモノリスと/a></p>
+<p><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいモノリスと</a></p>
 </body>
 
 </html>
