デプロイにいちいちコメントつけてられるか(？)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <h1>雑な各種リンク</h1>
-<p><a href="https://github.com/aki-lua87">Github MyPage</a></p>
+<p><a href="https://github.com/aki-lua87">Github</a></p>
 <p><a href="https://twitter.com/aki_lua87">Twitter</a></p>
 <p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
 <p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
