作ったものリストを追加

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
 
 <head>
@@ -30,6 +30,11 @@
 <p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
 <p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
 <p><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいモノリスと</a></p>
+    
+<h1>作ったものとか</h1>
+<p><a href="">Excelion(リンク行方不明中)</a></p>
+<p><a href="https://play.google.com/store/apps/details?id=jp.outlook.aki_lua87.SimpleLifeCounter">MTG用ライフカウンター</a></p>
+<p><a href="https://guraburu-go.appspot.com/index">グラブルの画像を消すやつ</a></p>
 </body>
 
 </html>
