--- a/index.html
+++ b/index.html
@@ -1,40 +1,82 @@
 ﻿<!DOCTYPE html>
-<html lang="en-us">
+<html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
-  <title>GitHub.io by aki-lua87</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <meta charset="UTF-8">
+    <title>GitHub.io by aki-lua87</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 </head>
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-71759707-3', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-71759707-3', 'auto');
+    ga('send', 'pageview');
 
 </script>
 
 <body>
+    <div class="about">
+        <h3>My Profile</h3>
+        <ul>
+            <li><h4>Name：</h4><span>緋狐/aki_lua87</span><p>発音する際は尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
+        </ul>
+        <ul>
+            <li>
+                <h4>iItroduction：</h4>
+                <p>狐です。C#等を嗜みます。</p>
+                <p>好きなものはXamarinです。</p>
+                <p>仕事ではAWS/Go言語などを触ってます、</p>
+            </li>
+        </ul>
+    </div>
 
-<h1>雑な各種リンク</h1>
-<p><a href="https://github.com/aki-lua87">Github</a></p>
-<p><a href="https://twitter.com/aki_lua87">Twitter</a></p>
-<p><a href="http://qiita.com/aki_lua87">Qiita</a></p>
-<p><a href="http://aki-lua87.hatenablog.com/">Blog</a></p>
-<p><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいモノリスと</a></p>
-    
-<h1>作ったものとか</h1>
-<p><a href="">Excelion(リンク行方不明中)</a></p>
-<p><a href="https://play.google.com/store/apps/details?id=jp.outlook.aki_lua87.SimpleLifeCounter">MTG用ライフカウンター</a></p>
-<p><a href="https://guraburu-go.appspot.com/index">グラブルの画像を消すやつ</a></p>
+    <div class="about">
+        <h3>これまでに作ったもの</h3>
+        <ul>
+            <li>
+                <h4><a href="https://1drv.ms/u/s!AvVa1Gs1Jz5MgfV-3NyW2ZclqHel_A">Excelion</a></h4>
+                <p>ExcelにTwitterのタイムラインを垂れ流します。</p>
+            </li>
+            <li>
+                <h4><a href="https://play.google.com/store/apps/details?id=jp.outlook.aki_lua87.SimpleLifeCounter">MTG用ライフカウンター</a></h4>
+                <p>Android用のシンプルなMtGライフカウンター</p>
+            </li>
+            <li>
+                <h4><a href="https://guraburu-go.appspot.com/index">EraseGrblReliefTweet</a></h4>
+                <p>グラブルの救援ツイートを消します</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="about">
+        <h3>Otuer Link</h3>
+        <ul>
+            <li>
+                <h4><a href="https://github.com/aki-lua87">Github</a></h4>
+            </li>
+            <li>
+                <h4><a href="http://qiita.com/aki_lua87">Qiita</a></h4>
+            </li>
+            <li>
+                <h4><a href="https://twitter.com/aki_lua87">Twitter</a></h4>
+            </li>
+            <li>
+                <h4><a href="http://aki-lua87.hatenablog.com/">はてなBlog</a></h4>
+            </li>
+            <li>
+                <h4><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいものリスト</a></h4>
+            </li>
+        </ul>
+    </div>
 </body>
-
 </html>
