自己紹介を詳しく

--- a/index.html
+++ b/index.html
@@ -28,20 +28,24 @@
     <div class="about">
         <h3>My Profile</h3>
         <ul>
-            <li><h4>Name：</h4><span>緋狐/aki_lua87</span><p>発音する際は尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
+            <li><h4>Name：</h4><span>緋狐/aki_lua87</span>
+            <p>アカキツネ/えーけーあいあんだーすこあはちじゅうなな</p>
+            <p>気軽に尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
         </ul>
         <ul>
             <li>
                 <h4>iItroduction：</h4>
-                <p>狐です。C#等を嗜みます。</p>
-                <p>好きなものはXamarinです。</p>
-                <p>仕事ではAWS/Go言語などを触ってます、</p>
+                <p>狐っ娘です。今年で0x256歳です。尻尾は2本あります。</p>
+                <p>ぽかぽかした日に縁側でぐでーってしながらMacbookProでTwitterするのが好きです。</p>
+                <p>主にC#とかXamarinとかを触ってます。</p>
+                <p>最近はGCPやGo言語に手を出したりしてます。</p>
+                <p>あとはMtGとかPSO2の話をします。</p>
             </li>
         </ul>
     </div>
 
     <div class="about">
-        <h3>これまでに作ったもの</h3>
+        <h3>Creations</h3>
         <ul>
             <li>
                 <h4><a href="https://1drv.ms/u/s!AvVa1Gs1Jz5MgfV-3NyW2ZclqHel_A">Excelion</a></h4>
@@ -53,13 +57,13 @@
             </li>
             <li>
                 <h4><a href="https://guraburu-go.appspot.com/index">EraseGrblReliefTweet</a></h4>
-                <p>グラブルの救援ツイートを消します</p>
+                <p>グラブルの救援など画像欄を圧迫する不要なツイートを消すTwitter連携Webアプリ</p>
             </li>
         </ul>
     </div>
 
     <div class="about">
-        <h3>Otuer Link</h3>
+        <h3>Other Link</h3>
         <ul>
             <li>
                 <h4><a href="https://github.com/aki-lua87">Github</a></h4>
