--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GitHub.io by aki-lua87</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 </head>
@@ -29,7 +29,7 @@
         <h3>My Profile</h3>
         <ul>
             <li><h4>Name：</h4><span>緋狐/aki_lua87</span>
-            <p>アカキツネ/えーけーあいあんだーすこあはちじゅうなな</p>
+            <p>読み方は「アカキツネ/えーけーあいあんだーすこあはちじゅうなな」です。</p>
             <p>気軽に尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
         </ul>
         <ul>
