--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>My Profile</h3>
         <ul>
             <li><h4>Name：</h4><span>緋狐/aki_lua87</span>
-            <p>読み方は「アカキツネ/えーけーあいあんだーすこあはちじゅうなな」です。</p>
+            <p>読み方は「アカキツネ/えーけーあいあんだーすこるあはちじゅうなな」です。</p>
             <p>気軽に尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
         </ul>
         <ul>
