--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <p>Android用のシンプルなMtGライフカウンター</p>
             </li>
             <li>
-                <h4><a href="https://guraburu-go.appspot.com/index">EraseGrblReliefTweet</a></h4>
-                <p>グラブルの救援など画像欄を圧迫する不要なツイートを消すTwitter連携Webアプリ</p>
+                <h4><a href="http://gu.akakitune87.net/">救援とかマルチのツイート消すアプリ</a></h4>
+                <p>グラブルの救援などの画像欄を圧迫する不要なツイートを消すTwitter連携Webアプリ</p>
             </li>
         </ul>
     </div>
