グラブル消す奴移動

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Android用のシンプルなMtGライフカウンター</p>
             </li>
             <li>
-                <h4><a href="http://gu.akakitune87.net/">救援とかマルチのツイート消すアプリ</a></h4>
+                <h4><a href="http://app.akakitune87.net/">救援とかマルチのツイート消すアプリ</a></h4>
                 <p>グラブルの救援などの画像欄を圧迫する不要なツイートを消すTwitter連携Webアプリ</p>
             </li>
         </ul>
