--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
     <div class="about">
         <h3>My Profile</h3>
         <ul>
-            <li><h4>Name：</h4><span>緋狐/aki_lua87</span>
-            <p>読み方は「アカキツネ/えーけーあいあんだーすこるあはちじゅうなな」です。</p>
-            <p>気軽に尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p></li>
+            <li>
+                <h4>Name：</h4><span>緋狐/aki_lua87</span>
+                <p>読み方は「アカキツネ/えーけーあいあんだーすこあるあはちじゅうなな」です。</p>
+                <p>気軽に尊敬と畏怖の念を込めて「アキちゃん」って呼んでください</p>
+            </li>
         </ul>
         <ul>
             <li>
                 <h4>iItroduction：</h4>
                 <p>狐っ娘です。今年で0x256歳です。尻尾は2本あります。</p>
                 <p>ぽかぽかした日に縁側でぐでーってしながらMacbookProでTwitterするのが好きです。</p>
-                <p>主にC#とかXamarinとかを触ってます。</p>
+                <p>主にC#とかを触ってます。</p>
                 <p>最近はGCPやGo言語に手を出したりしてます。</p>
                 <p>あとはMtGとかPSO2の話をします。</p>
             </li>
@@ -45,7 +47,7 @@
     </div>
 
     <div class="about">
-        <h3>Creations</h3>
+        <h3>作ったもの</h3>
         <ul>
             <li>
                 <h4><a href="https://1drv.ms/u/s!AvVa1Gs1Jz5MgfV-3NyW2ZclqHel_A">Excelion</a></h4>
@@ -56,14 +58,18 @@
                 <p>Android用のシンプルなMtGライフカウンター</p>
             </li>
             <li>
-                <h4><a href="http://app.akakitune87.net/">救援とかマルチのツイート消すアプリ</a></h4>
-                <p>グラブルの救援などの画像欄を圧迫する不要なツイートを消すTwitter連携Webアプリ</p>
+                <h4><a href="http://app.akakitune87.net/">救援とかマルチ消すの</a></h4>
+                <p>グラブルの救援の救援ツイート消す奴</p>
+            </li>
+            <li>
+                <h4><a href="https://github.com/aki-lua87/PSO2emaAPI">PSO2緊急クエストAPI</a></h4>
+                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出して作ったAPI <br>※使用例:<a href="http://akakitune87.net/pso2/emag_list">http://akakitune87.net/pso2/emag_list</a></p>
             </li>
         </ul>
     </div>
 
     <div class="about">
-        <h3>Other Link</h3>
+        <h3>その他リンク</h3>
         <ul>
             <li>
                 <h4><a href="https://github.com/aki-lua87">Github</a></h4>
@@ -83,4 +89,5 @@
         </ul>
     </div>
 </body>
+
 </html>
