グラブルの先変更

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p>Android用のシンプルなMtGライフカウンター</p>
             </li>
             <li>
-                <h4><a href="http://app.akakitune87.net/">救援とかマルチ消すの</a></h4>
+                <h4><a href="http://akakitune87.net/societte">Societte</a></h4>
                 <p>グラブルの救援の救援ツイート消す奴</p>
             </li>
             <li>
