GCPをAWSに変えたり遊戯王カウンタ追加したりハテブロ消したり

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li>
                 <h4>iItroduction：</h4>
                 <p>狐っ娘です。今年で0x256歳です。尻尾は2本あります。</p>
-                <p>ぽかぽかした日に縁側でぐでーってしながらMacbookProでTwitterするのが好きです。</p>
+                <p>ぽかぽかした日に巫女服のまま縁側でぐでーってしながらMacbookProでTwitterするのが好きです。</p>
                 <p>主にC#とかを触ってます。</p>
-                <p>最近はGCPやGo言語に手を出したりしてます。</p>
+                <p>AWSやGo言語にも手を出したりしてます。</p>
                 <p>あとはMtGとかPSO2の話をします。</p>
             </li>
         </ul>
@@ -54,12 +54,16 @@
                 <p>Android用のシンプルなMtGライフカウンター</p>
             </li>
             <li>
+                <h4><a href="https://play.google.com/store/apps/details?id=net.akakitune87.slcy">遊戯王用ライフカウンター</a></h4>
+                <p>Android用のシンプルな遊戯王ライフ計算機</p>
+            </li>
+            <li>
                 <h4><a href="http://akakitune87.net/societte">Societte</a></h4>
                 <p>グラブルの救援の救援ツイート消す奴</p>
             </li>
             <li>
                 <h4><a href="https://github.com/aki-lua87/PSO2emaAPI">PSO2緊急クエストAPI</a></h4>
-                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出して作ったAPI <br>※使用例:<a href="http://akakitune87.net/pso2/emag_list">http://akakitune87.net/pso2/emag_list</a></p>
+                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出して作ったAPI</p>
             </li>
         </ul>
     </div>
@@ -68,6 +72,9 @@
         <h3>その他リンク</h3>
         <ul>
             <li>
+                <h4><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいものリスト</a></h4>
+            </li>
+            <li>
                 <h4><a href="https://github.com/aki-lua87">Github</a></h4>
             </li>
             <li>
@@ -75,12 +82,6 @@
             </li>
             <li>
                 <h4><a href="https://twitter.com/aki_lua87">Twitter</a></h4>
-            </li>
-            <li>
-                <h4><a href="http://aki-lua87.hatenablog.com/">はてなBlog</a></h4>
-            </li>
-            <li>
-                <h4><a href="http://www.amazon.co.jp/registry/wishlist/YMYVUC0WJHFO/ref=cm_sw_r_tw_ws_x_18ofyb1BNCSN5">欲しいものリスト</a></h4>
             </li>
         </ul>
     </div>
