--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p>Android用のシンプルな遊戯王ライフ計算機</p>
             </li>
             <li>
-                <h4><a href="http://akakitune87.net/societte">Societte</a></h4>
+                <h4><a href="https://aki-lua87.appspot.com/societte">Societte</a></h4>
                 <p>グラブルの救援の救援ツイート消す奴</p>
             </li>
             <li>
