--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             </li>
         </ul>
     </div>
+    
+    <div class="about">
+        <h3>もうなんかググるのがめんどい時のリンク</h3>
+        <ul>
+            <li>
+                <h4><a href="./tools/to-lower.html">小文字変換</a></h4>
+            </li>
+            <li>
+                <h4><a href="./tools/to-upper.html">大文字変換</a></h4>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
