グラブルツール追加

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 <h4><a href="https://play.google.com/store/apps/details?id=net.akakitune87.slcy">遊戯王用ライフカウンター</a></h4>
                 <p>Android用のシンプルな遊戯王ライフ計算機</p>
             </li>
-<!--             <li>
-                <h4><a href="https://aki-lua87.appspot.com/societte">Societte</a></h4>
-                <p>グラブルの救援の救援ツイート消す奴</p>
-            </li> -->
+            <li>
+                <h4><a href="https://gbf.akakitune87.net/oath/request">グラブルの救援ツイート消すツール</a></h4>
+                <p>グラブルの救援ツイート消すツール </p>
+            </li>
             <li>
                 <h4><a href="https://github.com/aki-lua87/PSO2emaAPI">PSO2緊急クエストAPI</a></h4>
-                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出して作ったAPI</p>
+                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出してAPIにしたもの</p>
             </li>
         </ul>
     </div>
@@ -90,7 +90,7 @@
     </div>
     
     <div class="about">
-        <h3>もうなんかググるのがめんどい時のリンク</h3>
+        <h3>クソ雑ツールリンク</h3>
         <ul>
             <li>
                 <h4><a href="./tools/to-lower.html">小文字変換</a></h4>
