アプリ追加

--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
             </li>
             <li>
                 <h4><a href="https://github.com/aki-lua87/PSO2emaAPI">PSO2緊急クエストAPI</a></h4>
-                <p>PSO2公式サイトを解析して緊急クエスト予定を抽出してAPIにしたもの</p>
+                <p>PSO2公式サイトを解析してAPIにしたもの</p>
+            </li>
+            <li>
+                <h4><a href="https://play.google.com/store/apps/details?id=net.akakitune87.digicamemory">でじかめもり</a></h4>
+                <p>Android用のデジモンカードで遊ぶ時用のメモリ管理アプリ</p>
+            </li>
+            <li>
+                <h4><a href="https://play.google.com/store/apps/details?id=net.akakitune87.tasks">通知メモ</a></h4>
+                <p>Android用の通知からパッと呼び出せるメモアプリ</p>
             </li>
         </ul>
     </div>
